expand memory usage hints as discussed on PR